--- a/docroot/css/.sass-cache/custom.css
+++ b/docroot/css/.sass-cache/custom.css
@@ -45,6 +45,11 @@
   background-image: linear-gradient(#e6e8e9, #d1d1d1);
   border-color: #4cc417; }
 
+.aui [class*="span"] {
+  float: left;
+  min-height: 1px;
+  margin-left: 1px; }
+
 /* -----------Mixins --------------*/
 /* -----------Colors Variables --------------*/
 * {
@@ -246,4 +251,7 @@ html, body {
     .aui .portlet .portlet-content {
       background: #fff;
       padding: 20px 20px 0 20px; }
+
+.aui .form {
+  margin: 5px; }
 
