--- a/docroot/css/.sass-cache/main.css
+++ b/docroot/css/.sass-cache/main.css
@@ -2083,6 +2083,11 @@ body:first-of-type .portlet-content:hover .lfr-icon-actions .taglib-text {
   background-image: linear-gradient(#e6e8e9, #d1d1d1);
   border-color: #4cc417; }
 
+.aui [class*="span"] {
+  float: left;
+  min-height: 1px;
+  margin-left: 1px; }
+
 /* -----------Mixins --------------*/
 /* -----------Colors Variables --------------*/
 * {
@@ -2284,4 +2289,7 @@ html, body {
     .aui .portlet .portlet-content {
       background: #fff;
       padding: 20px 20px 0 20px; }
+
+.aui .form {
+  margin: 5px; }
 
