--- a/docroot/templates/portal_normal.vm
+++ b/docroot/templates/portal_normal.vm
@@ -32,12 +32,18 @@ $theme.include($body_top_include)
 	<header id="banner" role="banner">
 		<div class="container">
 			<div class="row">
+				<div class="span1">
+					$taglibLiferay.language("fm", null, "_82_languageId", 4)
+				</div>
+				<div class="span3">
+					$theme.journalContentSearch() 
+				</div>
 				<div class="span3">
 					<a class="$logo_css_class" href="$site_default_url" title="#language_format ("go-to-x", [$site_name])">
 						<img alt="$logo_description" height="$site_logo_height" src="$site_logo" width="$site_logo_width" />
 					</a>
 				</div>
-				<div class="span9">
+				<div class="span6">
 					#if ($has_navigation || $is_signed_in)
 						#parse ("$full_templates_path/navigation.vm")
 					#end
