--- a/docroot/_diffs/css/custom.css
+++ b/docroot/_diffs/css/custom.css
@@ -5,6 +5,8 @@
 @import url(color_schemes/blue.css);
 @import url(color_schemes/orange.css);
 @import url(color_schemes/green.css);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300&subset=latin,cyrillic-ext);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300&subset=latin,cyrillic-ext);
 
 .aui [class*="span"] {
     float: left;
@@ -39,7 +41,7 @@
 .aui {
 	body {
 	  background:url(../images/tiny_grid.png);
-	  font-family: 'Open Sans', sans-serif;
+	  font-family: Arial,Helvetica,"Roboto",sans-serif;
 	  color:$col2;
 	  font-size:13px;
 	}
@@ -54,7 +56,7 @@
 	h5,
 	h6 {
 	  font-weight: 600; 
-	  font-family: 'Open Sans', sans-serif;
+	  font-family: 'Roboto Condensed', sans-serif;
 	  color:$col2;
 	}
 
@@ -159,7 +161,7 @@
 	}	
 	.jMenu{display:table;margin:0 !important;padding:0;list-style:none; position:relative}
 	.jMenu li{display:table-cell; margin:0;list-style:none}
-	.jMenu li a{padding:20px 15px;display:block;background-color:transparent;color:#fff; cursor:pointer;font-size:12px}
+	.jMenu li a{padding:20px 15px;display:block;background-color:transparent;color:#fff;cursor:pointer;font-size:13px}
 	.jMenu li a:hover{background-color:#2a2a2a; color: #23dbdb; text-decoration:none;}
 	.jMenu li:hover>a{background-color:#2a2a2a}
 	.jMenu li ul{display:none;position:absolute;z-index:9999;padding:0;margin:0;list-style:none}
@@ -239,4 +241,8 @@
 
 .aui .form {
     margin: 5px;
+}
+
+.language {
+    margin: 16px;
 }
